# sly

./: .gitignore  AGENTS.md  LICENSE  README.md  eslint.config.js  index.html  latest.json  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/updater-notes/: README.md  TEMPLATE.md  v1.3.0.md  v1.4.0-beta.1.md  v1.4.0-beta.10.md  v1.4.0-beta.2.md  v1.4.0-beta.3.md  v1.4.0-beta.4.md  v1.4.0-beta.5.md  v1.4.0-beta.6.md  v1.4.0-beta.7.md  v1.4.0-beta.8.md  v1.4.0-beta.9.md  v1.4.0.md  v1.4.1.md  v1.5.0.md  v1.6.0.md  v1.6.1.md  v1.6.2.md  v1.6.3.md  v1.6.4.md  v1.6.5.md  v1.6.6.md  v1.7.0.md  v1.7.1.md
.github/workflows/: ci.yml  release.yml  update-beta-updater.yml  update-homebrew-tap.yml
docs/: ui-audit-2026-03-24.md  ui-design-language.md
docs/demo-workspace/: README.md
scripts/: select-beta-channel-release-lib.d.mts  select-beta-channel-release-lib.mjs  select-beta-channel-release.mjs  set-updater-channel.mjs  update-homebrew-cask.mjs
src/: App.css  App.test.tsx  App.tsx  emojilib-json.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: frontmatter.rs  git.rs  lib.rs  main.rs
src-tauri/src/cli/: discovery.rs  formatters.rs  mod.rs
src-tauri/src/persistence/: app_config.rs  mod.rs  workspace_settings.rs
src-tauri/src/tasks/: mod.rs
src/context/: GitContext.test.tsx  NotesContext.test.tsx  NotesContext.tsx  TasksContext.test.tsx  TasksContext.tsx  ThemeContext.test.tsx  ThemeContext.tsx
src/lib/: appearance.test.ts  (+33 more)
(+146 files in other folders)
