[package]
name = "sly"
version = "1.5.0"
description = "An offline markdown-based notes app"
authors = ["Wayne Vernon"]
edition = "2021"

[lib]
name = "sly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
notify = "8"
tantivy = "0.26"
tokio = { version = "1", features = ["fs", "sync"] }
base64 = "0.22"
url = "2"
urlencoding = "2"
open = "5"
regex = "1"
walkdir = "2"
tauri-plugin-single-instance = "2"
chrono = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v7"] }
dirs = "6"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSApplication"] }
objc2-foundation = { version = "0.3.2", default-features = false }

[dev-dependencies]
tempfile = "3"
